<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.config.ConfigActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/subTextSetting"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_text_setting" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Switch
                    android:id="@+id/swt_modoVista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_modovista" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Switch
                    android:id="@+id/swt_modoIdioma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_modoidioma" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <View
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />



    <TextView
        android:id="@+id/sub_text_setting_two"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_text_setting_two" />


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_opcion_colores"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_opcion_colores"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/check_color_amarrillo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/color_amarillo" />

            <CheckBox
                android:id="@+id/check_color_rojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/color_rojo" />

            <CheckBox
                android:id="@+id/check_color_verde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/color_verde" />

            <CheckBox
                android:id="@+id/check_color_azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Azul" />

            <CheckBox
                android:id="@+id/check_color_blanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/color_blanco" />

            <CheckBox
                android:id="@+id/check_color_negro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/color_negro" />

        </LinearLayout>

        <View
            android:layout_marginHorizontal="2dp"
            android:background="@color/black"
            android:layout_width="1dp"
            android:layout_height="300dp"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_opcion_dificultad"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_opcion_dificultad"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkFacil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dificultad_facil" />

            <CheckBox
                android:id="@+id/checkMedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dificultad_medio" />

            <CheckBox
                android:id="@+id/checkDificil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dificultad_dificil" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>