<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/ir_config"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcion_configuraciones"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ir_mis_juegos"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcion_mis_juegos"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/ir_nuevo_juego"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginVertical="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion_jugar"/>

    </androidx.cardview.widget.CardView>



</LinearLayout>